--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-background-slider": "^2.0.0",
     "react-dom": "^16.8.6",
     "react-is": "^16.8.6",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactjs-popup": "^1.5.0",
     "styled-components": "^5.0.0",
